
* Noteworthy changes in release ?.? (????-??-??) [?]

** Bug fixes

  du no longer multiply counts a file that is a directory or whose
  link count is 1, even if the file is reached multiple times by
  following symlinks or via multiple arguments.

  du -H and -L now consistently count pointed-to files instead of
  symbolic links, and correctly diagnose dangling symlinks.

** New features

  cp now accepts the --attributes-only option to not copy file data,
  which is useful for efficiently modifying files.

  du recognizes -d N as equivalent to --max-depth=N, for compatibility
  with FreeBSD.

  sort now accepts the --debug option, to highlight the part of the
  line significant in the sort, and warn about questionable options.

  sort now supports -d, -f, -i, -R, and -V in any combination.

  stat now accepts the %m format directive to output
  the mount point for a file.

** Changes in behavior

  df now consistently prints the device name for a bind mounted file,
  rather than its aliased target.

  du now uses less than half as much memory when operating on trees
  with many hard-linked files.  With --count-links (-l), or when
  operating on trees with no hard-linked files, there is no change.

  ls -l now uses the traditional three field time style rather than
  the wider two field numeric ISO style, in locales where a style has
  not been specified.  The new approach has nicer behavior in some
  locales, including English, which was judged to outweigh the disadvantage
  of generating less-predictable and often worse output in poorly-configured
  locales where there is an onus to specify appropriate non-default styles.
  [The old behavior was introduced in coreutils-6.0 and had been removed
   for English only using a different method since coreutils-8.1]

  sort -g now uses long doubles for greater range and precision.

  sort -h no longer rejects numbers with leading or trailing ".", and
  no longer accepts numbers with multiple ".".  It now considers all